initial seal scope

--- a/charts/sealed-secrets-web/templates/cluster-role.yaml
+++ b/charts/sealed-secrets-web/templates/cluster-role.yaml
@@ -22,6 +22,12 @@ rules:
   - apiGroups:
       - ""
     resources:
+      - namespaces
+    verbs:
+      - list
+  - apiGroups:
+      - ""
+    resources:
       - services/proxy
     verbs:
       - get
