--- a/charts/sealed-secrets-web/values.yaml
+++ b/charts/sealed-secrets-web/values.yaml
@@ -5,7 +5,9 @@ image:
   # default version .Chart.AppVersion
   tag:
   pullPolicy: IfNotPresent
-  args: []
+  args: 
+  - "--disable-load-secrets=true"
+  - "--format=yaml"
 
 imagePullSecrets: []
 nameOverride: ""
